<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_costime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFEFFF"
            android:text="@string/action_sifretest"
            android:textColor="#ff1493"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ant" />

            <EditText
                android:id="@+id/editText_cwant"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab4_atpw_textView_tab4pw" />

            <EditText
                android:id="@+id/editText_cwpow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="3000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Constr_subblfre" />

            <EditText
                android:id="@+id/editText__cwfre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="915250" />
        </LinearLayout>

        <Button
            android:id="@+id/button_cwset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Constr_set" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ON" />

            <Button
                android:id="@+id/button_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OFF" />
        </LinearLayout>

        <Button
            android:id="@+id/button_getafpow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_bntgetiafp" />

        <TextView
            android:id="@+id/textView_invenbfp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_ibp" />

        <TextView
            android:id="@+id/textView_invenbrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_ibrp" />

        <TextView
            android:id="@+id/textView_invenfp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_ip" />

        <TextView
            android:id="@+id/textView_invenafp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_iap" />

        <TextView
            android:id="@+id/textView_invenarp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_iarp" />

        <TextView
            android:id="@+id/textView_invencnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_icnt" />

        <TextView
            android:id="@+id/textView_inventep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cw_itep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_freLosslist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cw_rebwtest" />

            <Button
                android:id="@+id/button_api_getRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cw_rebwtestapi" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_frelostlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="频率	RL(dB)	VRWR	天线\n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_cabwtest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cw_cbwtest" />

            <Button
                android:id="@+id/button_rewtest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cw_rebwtest" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <com.graphics.cls.myview
                    android:id="@+id/myview"
                    android:layout_width="2000dp"
                    android:layout_height="600dp"
                    android:padding="10dp" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>
