<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <View
                 android:id="@+id/view2"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="#BFEFFF" />

             <TextView
                 android:id="@+id/textView33"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tab1_textView_pm"
                 android:textColor="#ff1493"
                 android:textSize="18sp" />
         </FrameLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <TextView
                 android:id="@+id/textView_pf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/tab1_textView_pf"
                 android:textSize="16sp" />

             <Spinner
                 android:id="@+id/spinner_pdatype2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <Button
                 android:id="@+id/button_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/action_db_up" />

             <Button
                 android:id="@+id/button_down"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/action_db_down" />
         </LinearLayout>
	
	<TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_db"
            android:textColor="#ff1493"
             android:background="#BFEFFF"
            android:textSize="18sp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_textView_adr"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_daddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_db_baudr"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_baudrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_pbaudr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="set baudrate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_db_open" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_db_close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_send1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/action_db_send1" />

        <Button
            android:id="@+id/button_send2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/action_db_send2" />

        <Button
            android:id="@+id/button_send3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/action_db_send3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_debugclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_button_readclear" />

        <Button
            android:id="@+id/button_revd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_db_revd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_send1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="FF00031D0C" />

        <EditText
            android:id="@+id/editText_send2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="FF00041D0B FF0522000003003238EE" />

        <EditText
            android:id="@+id/editText_send3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="FF032900BF004B22 FF00091D06" />

        <EditText
            android:id="@+id/editText_revd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>
</LinearLayout>
</ScrollView>